exercises/ex-4-07-gitops/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-dep
  namespace: todotest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todoapp
  template:
    metadata:
      labels:
        app: todoapp
    spec:
      volumes: # Define volume
        - name: shared-image
          persistentVolumeClaim:
            claimName: static-image-claim
      containers:
        - name: todoapp
          image: surajkodocker/todo:ex-4-07 #surajkodocker/todo:ex-4-07
          imagePullPolicy: Always
          readinessProbe:
            initialDelaySeconds: 10 # Initial delay until the readiness is tested
            periodSeconds: 5 # How often to test
            httpGet:
              path: /ready
              port: 5000
          livenessProbe:
            initialDelaySeconds: 20 # Initial delay until the liveness is tested
            periodSeconds: 5 # How often to test
            httpGet:
              path: /ready
              port: 5000
          volumeMounts: # Mount volume
          - name: shared-image
            mountPath: /usr/src/app/files
          ports:
            - containerPort: 5000
        - name: imagegenerator
          image: surajkodocker/imagegenerator:ex-4-07
          imagePullPolicy: IfNotPresent
          volumeMounts: # Mount volume
          - name: shared-image
            mountPath: /usr/src/app/files
