exercises/ex-4-07-gitops/manifests/postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-ss
  namespace: todotest
spec:
  serviceName: postgres-svc
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres
          ports:
            - name: web
              containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
              - /bin/sh
              - -c
              - exec pg_isready -U $POSTGRES_USER -d $POSTGRES_DB #user and db comes from the configmap
            initialDelaySeconds: 10
            periodSeconds: 10
          lifecycle:
            postStart:
              exec:
                command:
                - /bin/sh
                - -c
                - sleep 3 && psql -U $POSTGRES_USER -d $POSTGRES_DB -c 'CREATE TABLE IF NOT EXISTS todotable (id SERIAL PRIMARY KEY, title VARCHAR(50), description VARCHAR(140), done VARCHAR(4));' #user and db comes from the configmap
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-path
        resources:
          requests:
            storage: 100Mi
